plugins {
    id 'application'
    id "net.ltgt.errorprone" version "3.0.1"
}

compileJava {
    options.compilerArgs << '-parameters'
}
compileTestJava {
    options.compilerArgs << '-parameters'
}

sourceSets {
    main { java { srcDir 'src/main' } }
    test { java { srcDir 'src/test' } }
}

sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    annotationProcessor "org.immutables:value:2.9.2"
    implementation "org.immutables:value-annotations:2.9.2"

    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'

    implementation("com.github.ben-manes.caffeine:caffeine:3.2.0")
    implementation 'com.github.seancfoley:ipaddress:5.5.1'

    implementation "com.squareup.okhttp3:okhttp:4.12.0"
    implementation "com.squareup.okhttp3:logging-interceptor:4.12.0"

    implementation 'org.slf4j:slf4j-api:1.7.10'

    testImplementation 'org.slf4j:slf4j-simple:1.7.10'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
    testImplementation 'org.hamcrest:hamcrest-all:1.3'
    testImplementation 'com.google.guava:guava:18.0'

    annotationProcessor "com.uber.nullaway:nullaway:0.10.26"
    compileOnly "com.google.code.findbugs:jsr305:3.0.2"
    errorprone "com.google.errorprone:error_prone_core:2.10.0"
    errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
}

test {
    useJUnitPlatform()
}

import net.ltgt.gradle.errorprone.CheckSeverity

tasks.withType(JavaCompile) {
    // remove the if condition if you want to run NullAway on test code
    if (!name.toLowerCase().contains("test") && !name.toLowerCase().contains("build")) {
        options.errorprone {
            check("NullAway", CheckSeverity.ERROR)
            excludedPaths.set(".*[\\\\/]generated[\\\\/]sources[\\\\/].*")
            option("NullAway:AnnotatedPackages", "com.fidd")
        }
    } else {
        options.errorprone {
            check("DoNotMock", CheckSeverity.WARN)
        }
    }
}
